[workspace]
members = [
    "crates/litesvm-utils",
    "crates/anchor-litesvm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/brimigs/anchor-litesvm"
keywords = ["solana", "anchor", "litesvm", "testing", "blockchain"]

[workspace.dependencies]
litesvm = "0.8.2"
litesvm-token = "0.8.2"
anchor-lang = "1.0.0-rc.2"
anchor-client = "1.0.0-rc.2"
solana-sdk = "~3.0"
solana-program = "~3.0"
solana-client = "~3.0"
solana-program-pack = "~3.0"
borsh = "1.5.3"
sha2 = "0.10.8"
thiserror = "2.0"
spl-token = "9.0.0"
spl-associated-token-account = "8.0.0"
solana-system-interface = { version = "~3.0", features = ["bincode"] }