[package]
name = "anchor-litesvm"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Simplified Anchor testing with LiteSVM - similar syntax to anchor-client, 78% less code"
documentation = "https://docs.rs/anchor-litesvm"
keywords = ["solana", "anchor", "litesvm", "testing", "blockchain"]

[dependencies]
litesvm-utils = { version = "0.3.0", path = "../litesvm-utils" }
litesvm = { workspace = true }
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
borsh = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22"

[[example]]
name = "basic_usage"
path = "../../examples/basic_usage.rs"

[[example]]
name = "advanced_features"
path = "../../examples/advanced_features.rs"