[package]
name = "litesvm-utils"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Test helpers for LiteSVM - one-line token operations, assertions, and account management"
documentation = "https://docs.rs/litesvm-utils"
keywords = ["solana", "litesvm", "testing", "blockchain", "utilities"]

[dependencies]
litesvm = { workspace = true }
litesvm-token = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
solana-program-pack = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
solana-system-interface = { workspace = true }
thiserror = { workspace = true }